[gd_scene load_steps=3 format=3 uid="uid://bm43hytbyufwc"]

[ext_resource type="Script" path="res://ui/game_menus/settings_menu.gd" id="1_d0e47"]
[ext_resource type="StyleBox" uid="uid://cog3w4py5hdys" path="res://ui/components/button_container_stylebox.tres" id="2_48jbc"]

[node name="SettingsMenu" type="Panel"]
process_mode = 2
custom_minimum_size = Vector2(600, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0e47")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_48jbc")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Game Volume"

[node name="GameVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
value = 80.0
rounded = true
ticks_on_borders = true

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_48jbc")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
value = 40.0

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_48jbc")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
value = 80.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Return"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/PanelContainer/GameVolumeSlider" to="." method="_on_game_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/PanelContainer2/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/PanelContainer3/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
